ability to edit/update event

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,2 +1,13 @@
-<%= @event.title %><br>
-<%= @event.description %>
+<h2><%= @event.title %></h2>
+<p>
+	<%= @event.description %>
+</p>
+<p>
+	<%= @event.start_date %>
+</p>
+<p>
+	<%= @event.end_date %>
+</p>
+<p>
+	<%= @event.venue %>
+</p>
