--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -11,3 +11,5 @@
 <p>
 	<%= @event.venue %>
 </p>
+
+<%= link_to "Delete", event_path(@event), method: :delete, data: {confirm: "Are you sure ?"} %>
