--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -12,4 +12,5 @@
 	<%= @event.venue %>
 </p>
 
-<%= link_to "Delete", event_path(@event), method: :delete, data: {confirm: "Are you sure ?"} %>
+<%= link_to "Edit", edit_event_path(@event) %> |
+<%= link_to "Delete", event_path(@event), method: :delete, data: {confirm: "Are you sure ?"} %> |
