--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,14 +1,14 @@
-<% if @event.errors.any? %>
+<% if event.errors.any? %>
 	<div id="error_explanation">
-		<h3><%= pluralize(@event.errors.count, "error") %></h3>
+		<h3><%= pluralize(event.errors.count, "error") %></h3>
 	</div>
 	<ul>
-		<% @event.errors.full_messages.each do |error| %>
+		<% event.errors.full_messages.each do |error| %>
 			<li><%= error %></li>
 		<% end %>
 	</ul>
 <% end %>
-<%= form_for @event do |f| %>
+<%= form_for event do |f| %>
 	<div>
 		<%= f.label :title %>
 		<%= f.text_field :title %>
@@ -19,11 +19,11 @@
 	</div>
 	<div>
 		<%= f.label :start_date %>
-		<%= f.datetime_select :start_date %>
+		<%= f.datetime_select(:start_date, order: [:day, :month, :year], start_year: Date.current.year, ampm: true, prompt: true) %>
 	</div>
 	<div>
 		<%= f.label :end_date %>
-		<%= f.datetime_select :end_date %>
+		<%= f.datetime_select(:end_date, order: [:day, :month, :year], start_year: Date.current.year, ampm: true, prompt: true) %>
 	</div>
 	<div>
 		<%= f.label :venue %>
