--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
 
   <body>
   	<%= render 'shared/message' %>
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
+    
   </body>
 </html>
