--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,18 +1,61 @@
 <% provide(:title, @event.title) %>
 
-<h2><%= @event.title %></h2>
-<p>
-	<%= @event.description %><%= icon('flag')%>
-</p>
-<p>
-	<%= time_format(@event.start_date) %>
-</p>
-<p>
-	<%= time_format(@event.end_date)  %>
-</p>
-<p>
-	<%= @event.venue %>
-</p>
+<header>
+  <h2 id="show-title"><%= @event.title %></h2>
 
-<%= link_to "Edit", edit_event_path(@event) %> |
-<%= link_to "Delete", event_path(@event), method: :delete, data: {confirm: "Are you sure ?"} %> |
+  <ul class="actions">
+    <li><%= link_to "Edit Event", edit_event_path(@event), class: "edit"  %></li>
+    <li><%= link_to "Delete Event", event_path(@event), method: :delete, data: {confirm: "Are you sure?"}, class: "delete"  %></li>
+  </ul>
+</header>
+
+<div class="row">
+	<div class="col-sm-9">
+		<%= image_tag "http://via.placeholder.com/200x100" , class: "event-image" %>
+
+		<div class="event-meta">
+			<h4><span class="event-start"><strong>Starts:</strong><%= time_format(@event.start_date) %></span></h4>
+			<p><span class="event-start"><strong>Ends:</strong><%= time_format(@event.end_date) %></span></p>
+		</div>
+
+		<div class="event-details">
+			<h3>Event Details</h3>
+			<p><%= @event.description %></p>
+		</div>
+
+		<header>
+      		<h3>Comments</h3>
+    	</header>
+
+	    <div id="comments">
+	      
+	    </div>
+		 
+	</div>
+
+	<div class="col-sm-3">
+		<div class="sidebar">
+			<h4 class="organizer"><i class="fa fa-user" aria-hidden="true"></i>
+			Oraganizer Name </h4>
+			<p>
+				<span class="event-venue"><%= @event.venue %>, <strong><%= @event.location %></strong></span>
+			</p>
+		</div>
+		<div class="sidebar">
+			<h4 class="tags"><i class="fa fa-tag" aria-hidden="true"></i>Tags</h4>
+			Tag
+		</div>
+		<hr>
+		<div class="sidebar">
+      		<h4 class="attendees">Attendees <span class="pull-right"></span></h4>
+      		
+    	</div>
+		<hr>
+		<div class="sidebar">
+			<h4 class="likes"><i class="fa fa-heart" aria-hidden="true"></i> Likes</h4>
+			Like
+		</div>
+	</div>
+</div>
+
+<p><%= link_to "Back", events_path %></p>
