--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 
   <body>
   	<%= render 'shared/message' %>
+    <%= render 'shared/navbar' %>
     <div class="container">
       <%= yield %>
     </div>
