--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,38 +1,43 @@
-<% if event.errors.any? %>
-	<div id="error_explanation">
-		<h3><%= pluralize(event.errors.count, "error") %></h3>
-	</div>
-	<ul>
-		<% event.errors.full_messages.each do |error| %>
-			<li><%= error %></li>
+<div class="row">
+	<div class="col-sm-8 col-sm-offset-2">
+		<% if event.errors.any? %>
+			<div id="error_explanation">
+				<h3><%= pluralize(event.errors.count, "error") %></h3>
+			</div>
+			<ul>
+				<% event.errors.full_messages.each do |error| %>
+					<li><%= error %></li>
+				<% end %>
+			</ul>
 		<% end %>
-	</ul>
-<% end %>
-<%= form_for event do |f| %>
-	<div>
-		<%= f.label :title %>
-		<%= f.text_field :title %>
-	</div>
-	<div>
-		<%= f.label :description %>
-		<%= f.text_area :description %>
-	</div>
-	<div>
-		<%= f.label :start_date %>
-		<%= f.datetime_select(:start_date, order: [:day, :month, :year], start_year: Date.current.year, ampm: true, prompt: true) %>
-	</div>
-	<div>
-		<%= f.label :end_date %>
-		<%= f.datetime_select(:end_date, order: [:day, :month, :year], start_year: Date.current.year, ampm: true, prompt: true) %>
-	</div>
-	<div>
-		<%= f.label :venue %>
-		<%= f.text_field :venue %>
-	</div>
-	<div>
-		<%= f.label :location %>
-		<%= f.text_field :location %>
-	</div>
-	<%= f.submit %>
-<% end %>
+		<%= form_for event do |f| %>
+			<div>
+				<%= f.label :title %>
+				<%= f.text_field :title %>
+			</div>
+			<div>
+				<%= f.label :description %>
+				<%= f.text_area :description %>
+			</div>
+			<div>
+				<%= f.label :start_date %>
+				<%= f.datetime_select(:start_date, order: [:day, :month, :year], start_year: Date.current.year, ampm: true, prompt: true) %>
+			</div>
+			<div>
+				<%= f.label :end_date %>
+				<%= f.datetime_select(:end_date, order: [:day, :month, :year], start_year: Date.current.year, ampm: true, prompt: true) %>
+			</div>
+			<div>
+				<%= f.label :venue %>
+				<%= f.text_field :venue %>
+			</div>
+			<div>
+				<%= f.label :location %>
+				<%= f.text_field :location %>
+			</div>
+			<%= f.submit %>
+		<% end %>
 
+	
+	</div>
+</div>
