--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,13 +24,23 @@
 
 
 body {
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 14px;
-  color: #333;
-  // background: #f2f2f2;
+  color: #565a5c;
+  background-color: #F8F8F8;
+  font-family: "Varela Round", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   padding-top: 70px;
 }
 
+// NAVBARS
+.navbar-default {
+  background-color: #FFFFFF;
+}
+
+.navbar-default .navbar-brand {
+  color: #FF5A5F;
+  font-size: 2em;
+  font-weight: 400;
+}
 
 a:hover {
   text-decoration: none;
