--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,8 @@
-<nav class="navbar navbar-default navbar-fixed-top navbar-inverse">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
+<!-- Static navbar -->
+<nav class="navbar navbar-default navbar-fixed-top" style= "margin-bottom: 0px">
+  <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -10,30 +10,32 @@
       </button>
       <%= link_to "WhatsEvent", root_path, class: "navbar-brand" %>
     </div>
+    <div id="navbar" class="navbar-collapse collapse">
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="<%= "active" if current_page?("/")%>"><%= link_to "Home", root_path %></li>
-        <li class="<%= "active" if current_page?("/events")%>"><%= link_to "Events", events_path %></li>
-        <% unless user_signed_in? %>
-          <li class="<%= "active" if current_page?("/users/sign_up")%>"><%= link_to "Sign up", new_user_registration_path %></li>
-          <li class="<%= "active" if current_page?("/users/sign_in")%>"><%= link_to "Sign in", new_user_session_path %></li>
+      Search
+      
+      <ul class="nav navbar-nav navbar-right">
+        
+        
+        <% if (!user_signed_in?) %>
+          <li><%= link_to "Login", new_user_session_path %></li>
+          <li><%= link_to "Sign Up", new_user_registration_path %></li>
+        <% else %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              <%#= image_tag avatar_url(current_user), class: "img-circle avatar-small" %>&nbsp;
+              <%= current_user.email %><span class="caret"></span></a>
+            <ul class="dropdown-menu">
+            <li><%#= link_to "Dashboard", dashboard_path %></li>
+              <li><%= link_to "List Your Event", new_event_path %></li>
+              <li role="separator" class="divider"></li>
+              <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
+              <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+            </ul>
+          </li>
         <% end %>
       </ul>
-      <%#= form_tag events_path, class: "navbar-form navbar-left", 
-          method: :get do  %>
-          <div class="form-group">
-            <%#= text_field_tag :query, params[:query], placeholder: "Search events here..", class: "form-control" %>
-          </div>
-            <%#= submit_tag "Submit", class: "btn btn-default" %>
-      <%# end %>
 
-      <ul class="nav navbar-nav navbar-right">
-      
-        <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
-      
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+    </div><!--/.nav-collapse -->
+  </div>
 </nav>
