ability to show events of organizer

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -212,3 +212,17 @@ span.past {
   border-color: #2d467b;
   background-color: #2d467b;
 }
+
+// PANELS
+.panel-default .panel-heading {
+  color: #ffffff;
+  background-color: #00A699;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+// SIDEBAR
+.sidebar-list {
+  padding-left: 0;
+  list-style: none;
+}
