--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -36,7 +36,7 @@
 	<div class="col-sm-3">
 		<div class="sidebar">
 			<h4 class="organizer"><i class="fa fa-user" aria-hidden="true"></i>
-				<%= @event.organizer.organization_name %> </h4>
+				<%= link_to @event.organizer.organization_name, user_path(@event.organizer) %> </h4>
 			<p>
 				<span class="event-venue"><%= @event.venue %>, <strong><%= @event.location %></strong></span>
 			</p>
