displaying links to current user only

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -4,8 +4,10 @@
   <h2 id="show-title"><%= @event.title %></h2>
 
   <ul class="actions">
-    <li><%= link_to "Edit Event", edit_event_path(@event), class: "edit"  %></li>
-    <li><%= link_to "Delete Event", event_path(@event), method: :delete, data: {confirm: "Are you sure?"}, class: "delete"  %></li>
+  	<% if @event.organizer == current_user %>
+	    <li><%= link_to "Edit Event", edit_event_path(@event), class: "edit"  %></li>
+	    <li><%= link_to "Delete Event", event_path(@event), method: :delete, data: {confirm: "Are you sure?"}, class: "delete"  %></li>
+	<% end %>
   </ul>
 </header>
 
