--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -37,7 +37,7 @@
 
 			          <div class="lead-time">
 			          	<ul class="actions">
-					  	<% if @user == current_user %>
+					  	<% if @user == current_user || current_user.admin? %>
 						    <li><%= link_to "Edit Event", edit_event_path(event)  %></li>
 						    <li><%= link_to "Delete Event", event_path(event), method: :delete, data: {confirm: "Are you sure?"} %></li>
 						<% end %>
