--- a/app/views/admin/application/index.html.erb
+++ b/app/views/admin/application/index.html.erb
@@ -1,2 +1,81 @@
-<h1>Admin::Application#index</h1>
-<p>Find me in app/views/admin/application/index.html.erb</p>
+<div class="row">
+  <div class="col-sm-3 admin">
+    <div class="admin-sidebar">
+      <div class="user-panel">
+        <div class="pull-left image">
+          <%= image_tag "http://lorempixel.com/output/people-q-c-150-150-1.jpg", width: 20, class: "img-circle" %>
+        </div>
+        <div class="pull-left info">
+        <p><%= current_user.full_name %></p>
+        </div>
+      </div>
+    </div>
+    <ul class="admin-menu">
+      <li class="text-uppercase text-center header">Main Navigation</li>
+      <li>
+        <%= link_to "#" do %>
+          <i class="fa fa-users" aria-hidden="true"></i>
+          <span>Users</span>
+          <span class="label label-primary pull-right"><%#= @users.count %></span>
+        <% end %>
+      </li>
+
+      <li>
+        <%= link_to "#" do %>
+          <i class="fa fa-th-list" aria-hidden="true"></i>
+          <span>Categories</span>
+          <span class="label label-info pull-right"><%#= @categories.count %></span>
+        <% end %>
+      </li>
+
+      <li>
+        <%= link_to "#" do %>
+          <i class="fa fa-user" aria-hidden="true"></i>
+          <span>Attendees</span>
+          <span class="label label-danger pull-right"><%#= @attendances.count %></span>
+        <% end %>
+      </li>
+
+      <li>
+        <%= link_to "#" do %>
+          <i class="fa fa-calendar" aria-hidden="true"></i>
+
+          <span>Events</span>
+          <span class="label label-warning pull-right"><%#= @events.count %></span>
+        <% end %>
+      </li>
+
+      <li>
+        <%= link_to "#" do %>
+          <i class="fa fa-tag" aria-hidden="true"></i>
+          <span>Tags</span>
+          <span class="label label-default pull-right">tags</span>
+        <% end %>
+      </li>
+
+      <li>
+        <%= link_to "#" do %>
+          <i class="fa fa-comment-o" aria-hidden="true"></i>
+          <span>Comments</span>
+          <span class="label label-primary pull-right"><%#= @comments.count %></span>
+        <% end %>
+      </li>
+
+      <li>
+        <%= link_to "#" do %>
+          <i class="fa fa-heart" aria-hidden="true"></i>
+          <span>Likes</span>
+         <span class="label label-danger pull-right"><%#= @likes.count %></span>
+        <% end %>
+      </li>
+    </ul>
+  </div>
+
+    <div class="col-sm-9">
+      <header>
+        <h1>Dashboard <small>Control Panel</small></h1>
+      </header>
+
+      <h4>Welcome to Admin Dashboard of Eventsboard</h4>
+    </div>
+</div>
