ability for admin view all users

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 	<div class="col-md-3">
 		
 		<div class="panel panel-default">
-	      <div class="panel-heading"><%= @user.first_name %> &nbsp;<%= @user.last_name %></div>
+	      <div class="panel-heading"><%= @user.full_name %></div>
 	      <div class="panel-body">
 	        <ul class="sidebar-list">
 	          <li><strong>Username:</strong> &nbsp;<%= @user.username %></li>
