--- a/app/views/admin/application/index.html.erb
+++ b/app/views/admin/application/index.html.erb
@@ -13,10 +13,10 @@
     <ul class="admin-menu">
       <li class="text-uppercase text-center header">Main Navigation</li>
       <li>
-        <%= link_to "#" do %>
-          <i class="fa fa-users" aria-hidden="true"></i>
-          <span>Users</span>
-          <span class="label label-primary pull-right"><%#= @users.count %></span>
+        <%= link_to admin_users_path do %>
+		  <i class="fa fa-sitemap" aria-hidden="true"></i>
+          <span>Organizers</span>
+          <span class="label label-primary pull-right"><%= @users.count %></span>
         <% end %>
       </li>
 
@@ -32,16 +32,16 @@
         <%= link_to "#" do %>
           <i class="fa fa-user" aria-hidden="true"></i>
           <span>Attendees</span>
-          <span class="label label-danger pull-right"><%#= @attendances.count %></span>
+          <span class="label label-danger pull-right"> attendances</span>
         <% end %>
       </li>
 
       <li>
-        <%= link_to "#" do %>
+        <%= link_to events_path do %>
           <i class="fa fa-calendar" aria-hidden="true"></i>
 
           <span>Events</span>
-          <span class="label label-warning pull-right"><%#= @events.count %></span>
+          <span class="label label-warning pull-right"><%= @events.count %></span>
         <% end %>
       </li>
 
