--- a/app/views/admin/application/index.html.erb
+++ b/app/views/admin/application/index.html.erb
@@ -21,10 +21,10 @@
       </li>
 
       <li>
-        <%= link_to "#" do %>
+        <%= link_to admin_categories_path do %>
           <i class="fa fa-th-list" aria-hidden="true"></i>
           <span>Categories</span>
-          <span class="label label-info pull-right"><%#= @categories.count %></span>
+          <span class="label label-info pull-right"><%= @categories.count %></span>
         <% end %>
       </li>
 
