ability to upload and display pic

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -35,6 +35,10 @@
 				<%= f.label :location %>
 				<%= f.text_field :location %>
 			</div>
+
+			<div>
+				<%= f.file_field :image %>
+			</div>
 			<%= f.submit %>
 		<% end %>
 
