--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -27,7 +27,7 @@
     <div class="events">
       <div class="row">
         <div class="col-sm-3">
-          <%= image_tag "http://via.placeholder.com/200x100" %>
+          <%= image_tag event.image.url(:thumb) %>
         </div>
         <div class="col-sm-9">
           <h3 class="event-title"><%= event.title %></h3>
