--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -4,16 +4,18 @@
   <h2 id="show-title"><%= @event.title %></h2>
 
   <ul class="actions">
-  	<% if @event.organizer == current_user || current_user.admin? %>
-	    <li><%= link_to "Edit Event", edit_event_path(@event), class: "edit"  %></li>
-	    <li><%= link_to "Delete Event", event_path(@event), method: :delete, data: {confirm: "Are you sure?"}, class: "delete"  %></li>
+  	<% if user_signed_in? %>
+	  	<% if @event.organizer == current_user || current_user.admin? %>
+		    <li><%= link_to "Edit Event", edit_event_path(@event), class: "edit"  %></li>
+		    <li><%= link_to "Delete Event", event_path(@event), method: :delete, data: {confirm: "Are you sure?"}, class: "delete"  %></li>
+		<% end %>
 	<% end %>
   </ul>
 </header>
 
 <div class="row">
 	<div class="col-sm-9">
-		<%= image_tag "http://via.placeholder.com/848x400" , class: "event-image" %>
+		<%= image_tag @event.image.url(:medium) , class: "event-image" %>
 
 		<div class="event-meta">
 			<h4><span class="event-start"><strong>Starts:</strong><%= time_format(@event.start_date) %></span></h4>
