--- a/app/views/events/search.html.erb
+++ b/app/views/events/search.html.erb
@@ -1,22 +1,10 @@
-<section class="main-page text-center image-container">
-    <div class="container">
-      <div class="form-page">
-        <h2>Find your next experience</h2>
-        <%= form_tag(search_path, :method => "get", id: "search-form") do %>
-        <%= text_field_tag :search, params[:search], placeholder: "Search Events", class: 'form-control' %>
-        <%= submit_tag "Search", :name => nil %>
-      <% end %>
-      </div>
-      
-    </div>
-</section>
-<p></p>
 <div class="container">
+  <header>
   <h3>All Events</h3>
   <ul class="actions">
-    <% if user_signed_in? %>
-      <li><%= link_to "Add Event", new_event_path, class: "new" %></li>
-    <% end %>
+  	<% if user_signed_in? %>
+  		<li><%= link_to "Add Event", new_event_path, class: "new" %></li>
+  	<% end %>
   </ul>
   </header>
 
@@ -60,4 +48,3 @@
    </div>
   <% end %>
 </div>
-
