associated category and event and display show page based on category

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -37,6 +37,10 @@
 			</div>
 
 			<div>
+				<%= select_tag(:category_id, options_for_select(@category_array), prompt: "Select Category") %>
+			</div>
+
+			<div>
 				<%= f.file_field :image %>
 			</div>
 			<%= f.submit %>
