--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,22 +1,48 @@
 <% provide(:title, @category.name) %>
-<header>
-  <h1 class="text-uppercase"><%= @category.name %> <small>Events</small></h1>
-</header>
+<div class="container">
+    <header>
+    <h1 class="text-uppercase"><%= @category.name %> <small>Events</small></h1>
+  </header>
 
-<div class="row">
-  <div class="col-sm-3 pull-right">
-    <div class="sidebar">
-      <h3 class="discover">Discover</h3>
-      <ul class="nav nav-pills nav-stacked">
-        <li class="<%= "active" if current_page?("/events")%>"><%= link_to "ALL EVENTS", events_path %></li>
-        <% @categories.each do |category| %>
-          <li class="<%= "active" if current_page?("/categories/#{category.id}")%> text-uppercase">
-            <%= link_to category.name, category_path(category) %>
-          </li>
-        <% end %>
-      </ul>
+  <div class="row">
+    <div class="col-sm-3 pull-right">
+      <div class="sidebar">
+        <h3 class="discover">Discover</h3>
+        <ul class="nav nav-pills nav-stacked">
+          <li class="<%= "active" if current_page?("/events")%>"><%= link_to "ALL EVENTS", events_path %></li>
+          <% @categories.each do |category| %>
+            <li class="<%= "active" if current_page?("/categories/#{category.id}")%> text-uppercase">
+              <%= link_to category.name, category_path(category) %>
+            </li>
+          <% end %>
+        </ul>
+      </div>
     </div>
+
+  <% @category_events.each do |event| %>
+   <div class="col-sm-9 pull-left">
+     <%= link_to event_path(event) do %>
+      <div class="events">
+        <div class="row">
+          <div class="col-sm-3">
+            <%= image_tag event.image.url(:thumb), class: "event-image" %>
+          </div>
+          <div class="col-sm-9">
+            <h3 class="event-title"><%= event.title %></h3>
+            <p>
+              <span class="event-venue"><%= event.venue %> - <strong><%= event.location %></strong></span>
+            </p>
+            <p class="lead-time">
+              <span class="event-start"><%= time_format(event.start_date) %></span> <span class="pull-right">Organized by: <%= event.organizer.organization_name %></span>
+            </p>
+          </div>
+        </div>
+      </div>
+     <% end %>
+   </div>
+  <% end %>
   </div>
+</div>
 
   
   
