added use_id to comments

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,6 @@
 <%= comment.body %>
+
 <footer>
+	By <cite><%= comment.user.full_name %></cite>
 	<%= time_ago_in_words(comment.created_at) %>
 </footer>
