--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,70 +1,76 @@
 <% provide(:title, @event.title) %>
 
-<header>
-  <h2 id="show-title"><%= @event.title %></h2>
+<div class="container">
+	<header>
+	  <h2 id="show-title"><%= @event.title %></h2>
 
-  <ul class="actions">
-  	<% if user_signed_in? %>
-	  	<% if @event.organizer == current_user || current_user.admin? %>
-		    <li><%= link_to "Edit Event", edit_event_path(@event), class: "edit"  %></li>
-		    <li><%= link_to "Delete Event", event_path(@event), method: :delete, data: {confirm: "Are you sure?"}, class: "delete"  %></li>
+	  <ul class="actions">
+	  	<% if user_signed_in? %>
+		  	<% if @event.organizer == current_user || current_user.admin? %>
+			    <li><%= link_to "Edit Event", edit_event_path(@event), class: "edit"  %></li>
+			    <li><%= link_to "Delete Event", event_path(@event), method: :delete, data: {confirm: "Are you sure?"}, class: "delete"  %></li>
+			<% end %>
 		<% end %>
-	<% end %>
-  </ul>
-</header>
+	  </ul>
+	</header>
 
-<div class="row">
-	<div class="col-sm-9">
-		<%= image_tag @event.image.url(:medium) , class: "event-image" %>
+	<div class="row">
+		<div class="col-sm-9">
+			<%= image_tag @event.image.url(:medium) , class: "event-image" %>
 
-		<div class="event-meta">
-			<h4><span class="event-start"><strong>Starts:</strong><%= time_format(@event.start_date) %></span></h4>
-			<p><span class="event-start"><strong>Ends:</strong><%= time_format(@event.end_date) %></span></p>
+			<div class="event-meta">
+				<h4><span class="event-start"><strong>Starts:</strong><%= time_format(@event.start_date) %></span></h4>
+				<p><span class="event-start"><strong>Ends:</strong><%= time_format(@event.end_date) %></span></p>
+			</div>
+
+			<div class="event-details">
+				<h3>Event Details</h3>
+				<p><%= @event.description %></p>
+			</div>
+
+			<header>
+	      		<h3>Comments</h3>
+	    	</header>
+
+		    <div id="comments">
+		      <% if @event.comments.any? %>
+		      	<%= render @event.comments %>
+		      <% else %>
+		      	<p>There are no comments for this event</p>
+		      <% end %>
+		    </div>
+		    <% if user_signed_in? %>
+		    	<%= render "comments/form", event: @event, comment: @comment %>
+		    <% else %>
+		    	<h5><i><strong>Login to comment</strong></i></h5>
+		    <% end %>
+			 
 		</div>
 
-		<div class="event-details">
-			<h3>Event Details</h3>
-			<p><%= @event.description %></p>
+		<div class="col-sm-3">
+			<div class="sidebar">
+				<h4 class="organizer"><i class="fa fa-user" aria-hidden="true"></i>
+					<%= link_to @event.organizer.organization_name, user_path(@event.organizer) %> </h4>
+				<p>
+					<span class="event-venue"><%= @event.venue %>, <strong><%= @event.location %></strong></span>
+				</p>
+			</div>
+			<div class="sidebar">
+				<h4 class="tags"><i class="fa fa-tag" aria-hidden="true"></i>Tags</h4>
+				Tag
+			</div>
+			<hr>
+			<div class="sidebar">
+	      		<h4 class="attendees">Attendees <span class="pull-right"></span></h4>
+	      		
+	    	</div>
+			<hr>
+			<div class="sidebar">
+				<h4 class="likes"><i class="fa fa-heart" aria-hidden="true"></i> Likes</h4>
+				Like
+			</div>
 		</div>
-
-		<header>
-      		<h3>Comments</h3>
-    	</header>
-
-	    <div id="comments">
-	      <% if @event.comments.any? %>
-	      	<%= render @event.comments %>
-	      <% else %>
-	      	<p>There are no comments for this event</p>
-	      <% end %>
-	    </div>
-	    <%= render "comments/form", event: @event, comment: @comment %>
-		 
 	</div>
 
-	<div class="col-sm-3">
-		<div class="sidebar">
-			<h4 class="organizer"><i class="fa fa-user" aria-hidden="true"></i>
-				<%= link_to @event.organizer.organization_name, user_path(@event.organizer) %> </h4>
-			<p>
-				<span class="event-venue"><%= @event.venue %>, <strong><%= @event.location %></strong></span>
-			</p>
-		</div>
-		<div class="sidebar">
-			<h4 class="tags"><i class="fa fa-tag" aria-hidden="true"></i>Tags</h4>
-			Tag
-		</div>
-		<hr>
-		<div class="sidebar">
-      		<h4 class="attendees">Attendees <span class="pull-right"></span></h4>
-      		
-    	</div>
-		<hr>
-		<div class="sidebar">
-			<h4 class="likes"><i class="fa fa-heart" aria-hidden="true"></i> Likes</h4>
-			Like
-		</div>
-	</div>
+	<p><%= link_to "Back", events_path %></p>
 </div>
-
-<p><%= link_to "Back", events_path %></p>
