ability to display registered event

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -69,6 +69,10 @@
 				<h4 class="likes"><i class="fa fa-heart" aria-hidden="true"></i> Likes</h4>
 				Like
 			</div>
+
+			<div class="sidebar">
+				<%= link_to "Register", event_attendances_path(@event), method: :post, class: 'new' %>
+			</div>
 		</div>
 	</div>
 
