--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -61,8 +61,13 @@
 			</div>
 			<hr>
 			<div class="sidebar">
-	      		<h4 class="attendees">Attendees <span class="pull-right"></span></h4>
-	      		
+	      		<h4 class="attendees">Attendees
+		      		<span class="pull-right">
+		      			<%= @event.attendees.count %>
+		      		</span></h4>
+	      			<span class="label label-default pull-right">
+	      				<%= pluralize(@event.seats_left, "Seats") %> &nbsp;Available
+	      			</span>
 	    	</div>
 			<hr>
 			<div class="sidebar">
