--- a/app/views/admin/application/index.html.erb
+++ b/app/views/admin/application/index.html.erb
@@ -1,4 +1,5 @@
-<div class="row">
+<div class="container">
+  <div class="row">
   <div class="col-sm-3 admin">
     <div class="admin-sidebar">
       <div class="user-panel">
@@ -14,7 +15,7 @@
       <li class="text-uppercase text-center header">Main Navigation</li>
       <li>
         <%= link_to admin_users_path do %>
-		  <i class="fa fa-sitemap" aria-hidden="true"></i>
+      <i class="fa fa-sitemap" aria-hidden="true"></i>
           <span>Organizers</span>
           <span class="label label-primary pull-right"><%= @users.count %></span>
         <% end %>
@@ -78,4 +79,5 @@
 
       <h4>Welcome to Admin Dashboard of Eventsboard</h4>
     </div>
+</div>
 </div>
