--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,4 +1,5 @@
-<h2>Organizers</h2><%= link_to "Back To Dashboard", admin_root_path %>
+<div class="container">
+	<h2>Organizers</h2><%= link_to "Back To Dashboard", admin_root_path %>
 <br>
 	<div class="table-responsive">
 		<table class="table table-striped">
@@ -25,3 +26,5 @@
 	      	</tbody>  
 	    </table>	
   </div>
+
+</div>
