--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,5 +1,6 @@
-<header>
-  <h1>Categories</h1>
+<div class="container">
+  <header>
+  <h2>Categories</h2><%= link_to "Back To Dashboard", admin_root_path %>
 
   <% admins_only do %>
     <ul class="actions">
@@ -32,3 +33,4 @@
   </tbody>
 
 </table>
+</div>
