--- a/app/views/admin/application/index.html.erb
+++ b/app/views/admin/application/index.html.erb
@@ -66,7 +66,7 @@
         <%= link_to "#" do %>
           <i class="fa fa-heart" aria-hidden="true"></i>
           <span>Likes</span>
-         <span class="label label-danger pull-right"><%#= @likes.count %></span>
+         <span class="label label-danger pull-right"><%#= @likes.count %>likes</span>
         <% end %>
       </li>
     </ul>
