--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -49,6 +49,12 @@
 			<div>
 				<%= f.file_field :image %>
 			</div>
+
+			<div class="field">
+			    <%= f.label :tags %>
+			    <%= f.text_field :tag_list, placeholder: "Please enter comma separated words" %>
+  			</div>
+  			
 			<%= f.submit %>
 		<% end %>
 
