--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,13 +10,13 @@
       </button>
       <%= link_to "WhatsEvent", root_path, class: "navbar-brand" %>
     </div>
-    <div id="navbar" class="navbar-collapse collapse">
-
-      
-      
-      <ul class="nav navbar-nav navbar-right">
-        
-        
+      <ul class="nav navbar-nav navbar-left">
+        <li><%= form_tag(search_path, :method => "get", id: "search-form") do %>
+          <%= text_field_tag :search, params[:search], placeholder: "Search Events" %>
+          <%= submit_tag "Search", :name => nil, class: "btn btn-info" %>     
+        <% end %></li>
+      </ul>
+        <ul class="nav navbar-nav navbar-right">
         <% if (!user_signed_in?) %>
           <li><%= link_to "Login", new_user_session_path %></li>
           <li><%= link_to "Sign Up", new_user_registration_path %></li>
