--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,3 +1,5 @@
+<div class="page-margin"></div>
+
 <div class="container">
   <header>
   <h2>Categories</h2><%= link_to "Back To Dashboard", admin_root_path %>
