--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,3 +1,5 @@
+<div class="page-margin"></div>
+
 <div class="container">
 	<h2>Organizers</h2><%= link_to "Back To Dashboard", admin_root_path %>
 <br>
