--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,3 +1,5 @@
+<div class="page-margin"></div>
+
 <h3>Edit @event </h3>
 
 <div class="row">
@@ -13,49 +15,49 @@
 			</ul>
 		<% end %>
 		<%= form_for @event do |f| %>
-			<div>
+			<div class="form-group">
 				<%= f.label :title %>
-				<%= f.text_field :title %>
+				<%= f.text_field :title, class: "form-control" %>
 			</div>
-			<div>
+			<div class="form-group">
 				<%= f.label :description %>
-				<%= f.text_area :description %>
+				<%= f.text_area :description, class: "form-control" %>
 			</div>
-			<div>
+			<div class="form-group">
 				<%= f.label :start_date %>
 				<%= f.datetime_select(:start_date, order: [:day, :month, :year], start_year: Date.current.year, ampm: true, prompt: true) %>
 			</div>
-			<div>
+			<div class="form-group">
 				<%= f.label :end_date %>
 				<%= f.datetime_select(:end_date, order: [:day, :month, :year], start_year: Date.current.year, ampm: true, prompt: true) %>
 			</div>
-			<div>
+			<div class="form-group">
 				<%= f.label :venue %>
-				<%= f.text_field :venue %>
+				<%= f.text_field :venue, class: "form-control" %>
 			</div>
-			<div>
+			<div class="form-group">
 				<%= f.label :location %>
-				<%= f.text_field :location %>
+				<%= f.text_field :location, class: "form-control" %>
 			</div>
 
-			<div>
+			<div class="form-group">
 				<%= f.select(:category_id, @category_array, prompt: "Select Category") %>
 			</div>
 			
-			<div>
+			<div class="form-group">
 				<%= f.label :capacity %>
-				<%= f.number_field :seats, placeholder: "The number of attendees to the @event" %>
+				<%= f.number_field :seats, placeholder: "The number of attendees to the @event", class: "form-control" %>
 			</div>
-			<div>
+			<div class="form-group">
 				<%= f.file_field :image %>
 			</div>
 
-			<div class="field">
+			<div class="form-group">
 			    <%= f.label :tags %>
-			    <%= f.text_field :tag_list, placeholder: "Please enter comma separated words" %>
+			    <%= f.text_field :tag_list, placeholder: "Please enter comma separated words", class: "form-control" %>
   			</div>
   			
-			<%= f.submit %>
+			<%= f.submit class: "button-submit" %>
 		<% end %>
 
 	
