--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,16 +1,5 @@
-<section class="main-page text-center image-container">
-    <div class="container">
-      <div class="form-page">
-        <h2>Find your next experience</h2>
-        <%= form_tag(search_path, :method => "get", id: "search-form") do %>
-        <%= text_field_tag :search, params[:search], placeholder: "Search Events", class: 'form-control' %>
-        <%= submit_tag "Search", :name => nil %>
-      <% end %>
-      </div>
-      
-    </div>
-</section>
-<p></p>
+<div class="page-margin"></div>
+
 <div class="container">
   <h3>All Events</h3>
   <ul class="actions">
