--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,3 +1,20 @@
-<header>
-		
-	</header>
+<div class="main-page">
+	<div class="container text-center">
+        <div class="row">
+          <div class="col-md-12">
+            <%= image_tag("logo.png", alt: "Bell Logo", class: "hero-brand") %>
+          </div>
+        </div>
+
+        <div class="col-md-12">
+          <h1 class="main-title">
+            Find your next experience
+          </h1>
+
+          <p class="tagline">
+            WhatsEvent brings people together through live experiences. Discover events that match your passions.
+          </p>
+          <%= link_to "Get Started Now", events_path, class: "button button-full" %>
+        </div>
+      </div>
+</div>
