styled edit form event

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -228,6 +228,10 @@ span.past {
   margin-bottom: 90px;
 }
 
+.event-margin{
+  margin-bottom: 40px;
+}
+
 .button-submit{
   background-color: #ff5a5f;
   color: #fff;
