--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,9 +1,15 @@
 <div class="page-margin"></div>
 
-<h3>Edit @event </h3>
+<div class="container">
+	
+</div>
+
 
 <div class="row">
 	<div class="col-sm-8 col-sm-offset-2">
+	<h3>Edit: <%= @event.title %></h3>
+	<div class="event-margin"></div>
+
 		<% if @event.errors.any? %>
 			<div id="error_explanation">
 				<h3><%= pluralize(@event.errors.count, "error") %></h3>
